Signed-off-by: priyanksingh1990 <priyank.singh@expertit.in>

--- a/RELEASING/email_templates/vote_pmc.j2
+++ b/RELEASING/email_templates/vote_pmc.j2
@@ -28,13 +28,13 @@ The release candidate:
 https://dist.apache.org/repos/dist/dev/{{ project_module }}/{{ version_rc }}/
 
 Git tag for the release:
-https://github.com/apache/{{ project_module }}/tree/{{ version_rc }}
+https://github.com/kiranbmore0101/{{ project_module }}/tree/{{ version_rc }}
 
 The Change Log for the release:
-https://github.com/apache/{{ project_module }}/blob/{{ version_rc }}/CHANGELOG.md
+https://github.com/kiranbmore0101/{{ project_module }}/blob/{{ version_rc }}/CHANGELOG.md
 
 The Updating instructions for the release:
-https://github.com/apache/{{ project_module }}/blob/{{ version_rc }}/UPDATING.md
+https://github.com/kiranbmore0101/{{ project_module }}/blob/{{ version_rc }}/UPDATING.md
 
 Public keys are available at:
 https://www.apache.org/dist/{{ project_module }}/KEYS
